[package]
name = "im_interval_tree"
description = "An immutable data structure for storing and querying a collection of intervals"
version = "0.1.2"
authors = ["Jennifer Blight <jgblight@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jgblight/im_interval_tree"
categories = ["data-structures"]

[features]
arc = []

[dev-dependencies]
quickcheck = { git = "https://github.com/BurntSushi/quickcheck", rev = "71d743a" }